users: fix text misalignment issue in account overview menu

--- a/pkg/users/users.scss
+++ b/pkg/users/users.scss
@@ -55,7 +55,7 @@
 }
 
 .account-column-one {
-  min-width: 270px;
+  min-width: 280px;
   display: inline-block;
 }
 
